Smooth Shading not working with Screw Modifier #31164

Closed
opened 2012-04-28 20:08:45 +02:00 by futar · 6 comments

%%%When applying a screw modifier to a mesh, trying to set the shading option to smooth in the tool bar has no effect. The mesh remains in flat shading.

Macbook Pro 2011
OS X Lion 10.7.3
Processor: 2.4 GHz Intel Core i7
Memory: 8 GB 1333 MHz DDR3
Graphics: AMD Radeon HD 6770M 1024 MB

Blender 2.63 Official release (26/04/2012)%%%

%%%When applying a screw modifier to a mesh, trying to set the shading option to smooth in the tool bar has no effect. The mesh remains in flat shading. Macbook Pro 2011 OS X Lion 10.7.3 Processor: 2.4 GHz Intel Core i7 Memory: 8 GB 1333 MHz DDR3 Graphics: AMD Radeon HD 6770M 1024 MB Blender 2.63 Official release (26/04/2012)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%I forgot to mention you need to have a Subdivision Surface Modifier below the Screw Modifier.%%%

%%%I forgot to mention you need to have a Subdivision Surface Modifier below the Screw Modifier.%%%
Author

%%%Also... I meant to say "When adding a screw modifier..." not "When applying..."%%%

%%%Also... I meant to say "When adding a screw modifier..." not "When applying..."%%%

%%%Fix in svn, thanks for the report.%%%

%%%Fix in svn, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%I just downloaded Blender 2.63a (r46461), and this bug seems to still be present even though it is listed in the bug fix list under r46125.%%%

%%%I just downloaded Blender 2.63a (r46461), and this bug seems to still be present even though it is listed in the bug fix list under r46125.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31164
No description provided.