Fix #31164: constructive modifier followed by subsurf modifier did not show face smoothing flags correctly. In fact it would do an invalid memory access, using the -1 original index.